--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
         allowfullscreen
       ></iframe>
     </form>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
