change size text

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jogo</title>
     <style>
+      #label {
+        max-width: 600px;
+      }
       #app {
         font-family: Avenir, Helvetica, Arial, sans-serif;
         -webkit-font-smoothing: antialiased;
@@ -15,7 +18,7 @@
         margin-top: 60px;
       }
       body {
-        font-size: '50';
+        font-size: 1.2rem;
         text-align: center;
       }
     </style>
@@ -43,8 +46,8 @@
         allowfullscreen
       ></iframe>
       <iframe
-        width="560"
-        height="315"
+        width="1300"
+        height="600"
         src="https://www.youtube.com/embed/I57YuaY312k?autoplay=1&loop=1&autopause=0"
         title="YouTube video player"
         frameborder="0"
